# emoji-picker

./: .gitignore  .instructions.md  Cargo.toml  FLATPAK.md  Makefile  README.md  RUST_INSTRUCTIONS.md  build.rs  dev.emoji_picker.EmojiPicker.json  emoji-picker.desktop  nl.dibitat.emoji_picker.json
.devcontainer/: Dockerfile  devcontainer.json
data/: style.css
docs/adr/: 0001-flatpak-vs-native-packaging.md
examples/: category_bar_mock.rs  category_bar_widget_mock.rs
packaging/: FLATPAK.md  emoji-picker.desktop  nl.dibitat.emoji_picker.appdata.xml  nl.dibitat.emoji_picker.json  nl.dibitat.emoji_picker.metainfo.xml
packaging/flatpak/: FLATPAK_STATUS.md  nl.dibitat.emoji_picker.json  nl.dibitat.emoji_picker.metainfo.xml
packaging/rpm/: README.md  build_rpm.sh  emoji-picker.spec
scripts/: ci-build.sh
src/: app.rs  clipboard.rs  emoji.rs  lib.rs  main.rs
src/emoji/: db.rs  emoji_data.rs  mod.rs  search.rs
src/ui/: app_controller.rs  category_bar.rs  constants.rs  emoji_grid.rs  emoji_label.rs  main_window.rs  mod.rs  search.rs  style.rs  window.rs
tests/: app_controller_integration.rs
