[package]
name = "emoji-picker"
version = "0.0.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.8", package = "gtk4" }
libadwaita = "0.6"
once_cell = "1.19"
unicode-segmentation = "1.11"

log = "0.4"
env_logger = "0.10"
glib = "0.18"


[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
quick-xml = "0.31"
reqwest = { version = "0.11", features = ["blocking"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

